--- a/package.json
+++ b/package.json
@@ -6,11 +6,28 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js",
+    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.jsx,**/*.spec.jsx",
     "dev": "start-storybook -p 5555",
     "test:coverage": "jest --coverage",
     "test:unit": "jest",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "prettier --write \"**/*.{js,json,md,yml}\"",
+    "lint:js": "eslint './packages/**/*.js' --ext .js --ignore-pattern lib --ignore-pattern node_modules",
+    "lint:styles": "stylelint './packages/**/*.js' --ignore-pattern lib --ignore-pattern node_modules",
+    "lint": "yarn lint:js && yarn lint:styles",
+    "now-build": "build-storybook -c .storybook -o public",
+    "deploy-storybook": "storybook-to-ghpages"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,md,yml}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -20,18 +37,31 @@
     "@storybook/addon-docs": "^6.3.10",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.3.10",
+    "@storybook/storybook-deployer": "^2.8.10",
     "babel-jest": "^27.2.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.2",
     "jest": "^27.2.5",
     "jest-haste-map": "^27.2.5",
     "jest-resolve": "^27.2.5",
     "jest-styled-components": "^7.0.5",
     "lerna": "^4.0.0",
+    "lint-staged": "^11.2.2",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "styled-components": "^5.3.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "webpack": "^5.58.1"
   }
 }
