--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,16 @@
 {
   "packages": ["packages/*"],
+  "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent"
+  "command": {
+    "publish": {
+      "conventionalCommits": true,
+      "yes": true,
+      "registry": " https://npm.pkg.github.com"
+    },
+    "version": {
+      "message": "chore(release): publish"
+    }
+  }
 }
