--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "workspaces": [
     "packages/*"
   ],
+  "repository": "git@github.com:piyushchauhan2011/supreme-bassoon.git",
+  "author": "Piyush Chauhan <piyushchauhan2011@gmail.com>",
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.jsx,**/*.spec.jsx",
